--- a/index.html
+++ b/index.html
@@ -5,25 +5,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+    <header class="header">
+      <nav class="nav">
+        <a class="header-logo logo link" href="./index.html"
+          ><span class="header-web">Web</span>Studio</a
+        >
+        <ul class="header-list list">
+          <li class="header-item">
+            <a class="header-item link current" href="">Studio</a>
+          </li>
+          <li class="header-item">
+            <a class="header-item link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="header-item">
+            <a class="header-item link" href="">Contacts</a>
+          </li>
         </ul>
       </nav>
-      <address>
-        <ul>
-          <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <address class="address">
+        <ul class="address-list list">
+          <li class="address-item">
+            <a class="address-link link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
-          <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          <li class="address-item">
+            <a class="address-link link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -31,39 +50,39 @@
 
     <main>
       <!--Hero-->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="hero-btn">Order Service</button>
       </section>
 
       <!--Feutures-->
       <section>
         <h2 hidden>Feutures</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
+        <ul class="feutures-list list">
+          <li class="feutures-item">
+            <h3 class="feutures-subtitle">Strategy</h3>
+            <p class="feutures-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="feutures-item">
+            <h3 class="feutures-subtitle">Punctuality</h3>
+            <p class="feutures-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="feutures-item">
+            <h3 class="feutures-subtitle">Diligence</h3>
+            <p class="feutures-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
+          <li class="feutures-item">
+            <h3 class="feutures-subtitle">Technologies</h3>
+            <p class="feutures-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -73,27 +92,30 @@
 
       <!--What are we doing-->
       <section>
-        <h2>What are we doing</h2>
-        <ul>
-          <li>
+        <h2 class="projects-title">What are we doing</h2>
+        <ul class="projects-list list">
+          <li class="projects-item">
             <img
               src="./images/feutures/computer.jpg"
               alt="Computer design"
               width="360"
+              height="300"
             />
           </li>
-          <li>
+          <li class="projects-item">
             <img
               src="./images/feutures/applications.jpg"
               alt="Applications design"
               width="360"
+              height="300"
             />
           </li>
-          <li>
+          <li class="projects-item">
             <img
               src="./images/feutures/phone.jpg"
               alt="Phone design"
               width="360"
+              height="300"
             />
           </li>
         </ul>
@@ -101,51 +123,57 @@
 
       <!--Out team-->
       <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+        <h2 class="team-title">Our Team</h2>
+        <ul class="team-title-list list">
+          <li class="team-item">
             <img
               src="./images/our-team/mark-guerrero.jpg"
               alt="Mark Guerrero"
               width="264"
+              height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-subtitle">Mark Guerrero</h3>
+            <p class="team-text">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/our-team/tom-ford.jpg"
               alt="Tom Ford"
               width="264"
+              height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-subtitle">Tom Ford</h3>
+            <p class="team-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/our-team/camila-garcia.jpg"
               alt="Camila Garcia"
               width="264"
+              height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-subtitle">Camila Garcia</h3>
+            <p class="team-text">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/our-team/daniel-wilson.jpg"
               alt="Daniel Wilson"
               width="264"
+              height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-subtitle">Daniel Wilson</h3>
+            <p class="team-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a class="footer-logo logo link" href="./index.html"
+        ><span class="footer-web">Web</span>Studio</a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
