--- a/portfolio.html
+++ b/portfolio.html
@@ -17,8 +17,7 @@
   <body>
     <header class="header">
       <nav class="nav">
-        <a class="header-logo logo link" href="./index.html"
-          ><span class="header-web">Web</span>Studio</a
+      <a class="header-logo logo link" href="./index.html">Web<span class="header-web">Studio</span></a
         >
         <ul class="header-list list">
           <li class="header-item">
@@ -49,8 +48,8 @@
     </header>
 
     <main>
-      <h1 hidden>Portfolio cases</h1>
-      <h2 hidden>Filtr Gallery</h2>
+      <section>
+        <h1 hidden>Portfolio cases</h1>
       <ul class="list">
         <li>
           <button type="button" class="portfolio-page-btn">All</button>
@@ -187,6 +186,7 @@
           </a>
         </li>
       </ul>
+      </section>  
     </main>
 
     <footer class="footer">
