--- a/index.html
+++ b/index.html
@@ -17,12 +17,11 @@
   <body>
     <header class="header">
       <nav class="nav">
-        <a class="header-logo logo link" href="./index.html"
-          ><span class="header-web">Web</span>Studio</a
+        <a class="header-logo logo link" href="./index.html">Web<span class="header-web">Studio</span></a
         >
         <ul class="header-list list">
           <li class="header-item">
-            <a class="header-item link current" href="">Studio</a>
+            <a class="header-item link current" href="./index.html">Studio</a>
           </li>
           <li class="header-item">
             <a class="header-item link" href="./portfolio.html">Portfolio</a>
@@ -170,9 +169,8 @@
     </main>
 
     <footer class="footer">
-      <a class="footer-logo logo link" href="./index.html"
-        ><span class="footer-web">Web</span>Studio</a
-      >
+      <a class="footer-logo logo link" href="./index.html">Web<span class="footer-web">Studio</span></a
+        >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
@@ -180,3 +178,4 @@
     </footer>
   </body>
 </html>
+#F4F4FD;
