--- a/portfolio.html
+++ b/portfolio.html
@@ -102,7 +102,7 @@
               width="360"
               height="300"
             />
-            <h2 class="portfolio-pg-namecard">Meditaion App</h2>
+            <h2 class="portfolio-pg-namecard">Meditation App</h2>
             <p class="portfolio-pg-text">App</p>
             <p class="portfolio-pg-text-back"></p>
           </a>
