--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
             <a class="header-item link" href="./index.html">Studio</a>
           </li>
           <li class="header-item">
-            <a class="header-item link current" href="">Portfolio</a>
+            <a class="header-item link current" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="header-item">
             <a class="header-item link" href="">Contacts</a>
