--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         >
         <ul class="header-list list">
           <li class="header-item">
-            <a class="header-item link current" href="./index.html">Studio</a>
+            <a class="header-link link current" href="./index.html">Studio</a>
           </li>
           <li class="header-item">
-            <a class="header-item link" href="./portfolio.html">Portfolio</a>
+            <a class="header-link link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="header-item">
-            <a class="header-item link" href="">Contacts</a>
+            <a class="header-link link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
