--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a class="header-link link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="header-item">
-            <a class="header-link link" href="">Contacts</a>
+            <a class="header-link link" href="./index.html">Contacts</a>
           </li>
         </ul>
       </nav>
